  - #6257 cms_selflink adding space
  - #6272 tiny mce adjustments fail (Translation problem)
  - #6278 NCleanGrey Admin Theme typo
  - #6284 CMSMailer system message 'mail not setup' link leads to login page (Translation problem)
  - #6322 wrong db query in SetUserTag method
  - #6386 cms_htmlenities in created_date & modified_date
  - #6436 	MenuManager: wrong assignment of $node->depth

Core - Feature requests:
  - 
  
Core Installer:
  -

MenuManager:
  -

ModuleManager:
  -

Printing:
  -
  
TinyMCE:
  -
  

  
Version 1.9.4.1 - Faanui
-----------------------------
Module Manager:
  - Typo function.newversionstab.php

  
Version 1.9.4 - Faanui
-----------------------------
Core - Bug Reports
  - #6083 Imagemanager Don't show uploaded files
  - #6094 Page alias update old-value after copy-page
  - #6096 Content is not showing when changing type back to content
  - #6098 Server Response Header `Last-Modified` not changing
  - #6099 Deleting alias in editcontent and submitting restores old alias 
  - #6106 no cache-control in login.php -> no logout!
  - #6136 TinyMCE file-manager cache problem
  - #6168 canonical tag for news ignoring news_url field
  - Fixes problem with image manager and caching in google chrome
    and other webkit browsers.
  - Fixes problem with caching on ANY and all admin pages
  - Fixes problem with with installs using MySQL 5.5.x
    (the solution was implemented in the adodb_lite library so
     all modules should work).
  - Fixes problems with switching content types when editing pages
    and content blocks not being restored.
  - Minor optimization to adodb_lite for the GetOne and GetRow methods
  - Fixes a problem where the contentcache was not being read.
	
MenuManager:
  - #6188 using show_all with childrenof does not work	

Modulemanager:
  - Fixes a useability issue with the selected tab and the selected letter
    after upgrading a module.  
  

Version 1.9.3 - Motu Tane
-----------------------------
Core - Bugreports: